--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@angular/compiler": "~11.2.9",
     "@angular/compiler-cli": "~11.2.9",
     "@angular/core": "~11.2.9",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.2.9",
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
     "express": "^4.17.1",
+    "firebase": "^8.6.1",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
