--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@angular/compiler": "~11.2.9",
     "@angular/compiler-cli": "~11.2.9",
     "@angular/core": "~11.2.9",
-    "@angular/fire": "^6.1.4",
-    "@angular/forms": "~11.2.9",
+    "@angular/fire": "^6.1.5",
+    "@angular/forms": "^11.2.14",
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
