--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^8.6.1",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.0.8",
     "tslib": "^2.0.0",
     "typescript": "~4.1.5",
     "zone.js": "~0.11.3"
