--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "@angular/core": "~11.2.9",
     "@angular/fire": "^6.1.5",
     "@angular/forms": "^11.2.14",
+    "@angular/localize": "~11.2.9",
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.2",
     "animate.css": "^4.1.1",
+    "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "firebase": "^8.6.1",
     "path": "^0.12.7",
