--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sweetalert2": "^11.0.8",
     "tslib": "^2.0.0",
     "typescript": "~4.1.5",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
@@ -43,6 +44,7 @@
     "@angular/compiler-cli": "~11.2.9",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
