--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.2",
     "animate.css": "^4.1.1",
     "bootstrap": "^4.5.0",
+    "chart.js": "^3.3.2",
     "express": "^4.17.1",
     "firebase": "^8.6.1",
+    "highcharts": "^9.1.2",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
-    "sweetalert2": "^11.0.8",
+    "sweetalert2": "^11.0.18",
     "tslib": "^2.0.0",
     "typescript": "~4.1.5",
     "uuid": "^8.3.2",
