--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^4.5.0",
     "chart.js": "^3.3.2",
     "express": "^4.17.1",
+    "file-saver": "^2.0.5",
     "firebase": "^8.6.1",
     "highcharts": "^9.1.2",
     "path": "^0.12.7",
@@ -38,12 +39,14 @@
     "tslib": "^2.0.0",
     "typescript": "~4.1.5",
     "uuid": "^8.3.2",
+    "xlsx": "^0.17.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.8",
     "@angular/cli": "~11.2.8",
     "@angular/compiler-cli": "~11.2.9",
+    "@types/file-saver": "^2.0.2",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.0",
