--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^8.6.1",
     "highcharts": "^9.1.2",
+    "ng-recaptcha": "^8.0.0",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.0.18",
